@@ -592,10 +592,14 @@ static int itemdb_read_itemslottable(void)
 	buf[s]=0;
 	for(p=buf;p-buf<s;){
 		int nameid,equip;
-		struct item_data* item = itemdb_search(nameid);
+		struct item_data* item;
 		sscanf(p,"%d#%d#",&nameid,&equip);
-		if (item && itemdb_isequip2(item))
+		item = itemdb_search(nameid);
+		if (item && itemdb_isequip2(item)) {
+			if (item->equip != equip)
+				printf ("%s - %d > %d\n", item->name, item->equip, equip);
 			item->equip=equip;
+		}
 		p=strchr(p,10);
 		if(!p) break;
 		p++;
